--- a/WebContent/vezbaSecurity/login.html
+++ b/WebContent/vezbaSecurity/login.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Login page</title>
 </head>
 <body>
-<form action="loginServlet.html">
-  <label for="fname">Korisnicko ime:</label>
+<form action="loginServlet.html" method="post">
+  <label for="username">Korisnicko ime:</label>
   <input type="text"  name="username"><br><br>
-  <label for="lname">Password:</label>
+  <label for="password">Password:</label>
   <input type="password"  name="password"><br><br>
   <input type="submit" value="login">
   <!-- <input type="submit" formaction="/action_page2.php" value="Submit as Admin"> -->
