--- a/WebContent/vezbaSecurity/notAuthorized.html
+++ b/WebContent/vezbaSecurity/notAuthorized.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Not authorized page</title>
 </head>
 <body>
-
+Nije autorizovano!!!!!
 </body>
 </html>
