--- a/WebContent/vezbaSecurity/notRegistered.html
+++ b/WebContent/vezbaSecurity/notRegistered.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Not registered page</title>
 </head>
 <body>
-
+Korisnik nije registrovan !!!
 </body>
 </html>
