--- a/WebContent/vezbaSecurity/pogresanPassword.html
+++ b/WebContent/vezbaSecurity/pogresanPassword.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Pogresan password page</title>
 </head>
 <body>
-
+Pogresan password!!!
 </body>
 </html>
