--- a/WebContent/vezbaSecurity/login.html
+++ b/WebContent/vezbaSecurity/login.html
@@ -6,12 +6,10 @@
 </head>
 <body>
 <form action="loginServlet.html" method="post">
-  <label for="username">Korisnicko ime:</label>
-  <input type="text"  name="username"><br><br>
-  <label for="password">Password:</label>
-  <input type="password"  name="password"><br><br>
-  <input type="submit" value="login">
-  <!-- <input type="submit" formaction="/action_page2.php" value="Submit as Admin"> -->
+Korisnicko ime: <input type="text"  name="username"><br><br>
+Password:       <input type="password"  name="password"><br><br>
+                <input type="submit" value="login">
+ 
 </form>
 </body>
 </html>
